--- a/TODO
+++ b/TODO
@@ -1,8 +1,12 @@
 FIXME:
     -   Find some way to always pass certain vars to templates. Constantly
         passing the 'topusers' and 'topscripts' is annoying. Perhaps base.html
-        can retrieve it on its own?
-    -   Clean up UserTool and ScriptTool
+        can retrieve it on its own? (Add last commits)
+    -   Main page text.
+    -   Login / session
+    -   Manage / Create scripts.
+    -   Commit API page.
+    -   Add additional URLs (/user/:id/scripts)
 
 TODO:
     -   Charts using matplotlib.
