--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 TODO:
-    -   Create scripts.
     -   Filter username / password. (Allow characters)
+    -   Fix bug: Is a script/user has no commits, it isn't listed in the
+        ``Scripts / User'' list.
     -   Create API for signatures.
     -   Finish /variable/all pages.
     -   Add optionparser for logfiles, etc.
