--- a/TODO
+++ b/TODO
@@ -2,13 +2,13 @@ TODO:
     -   Fix bug: If a script/user has no commits, it isn't listed in the
         ``Scripts / User'' list.
     -   Require email at registration.
-    -   Create API for signatures.
     -   Finish /variable/all pages.
     -   Add optionparser for logfiles, etc.
     -   My Commits page?
     -   Customized page if you're logged in? Recent commit by you, recent
         commits to your scripts?
     -   Add additional URLs (/user/:id/scripts)
+    -   Images per variable?
 
     -   Pages and graphs for Variables.
         -   Per users (pie)
