--- a/TODO
+++ b/TODO
@@ -12,6 +12,12 @@ TODO:
 
     -   Add optionparser for logfiles, etc.
 
+    -   Weekly / Monthly report. (In pdf, txt)?
+    -   Time (gained) delta.
+    -   Script and user activity. Stats per week, etc.
+    -   ``Overview'' page. List top 50 users, scripts, variables. Also show time
+    delta here and on user page.
+
     -   Pages and graphs for Variables.
         -   Per users (pie)
         -   Per scripts (pie)
